Add tests for RegularExpressionParser